Rename some classes.
Add means to fetch data back after posting it.

Refactor code into a service class.

Expose only web service port in docker compose.

Update readme.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
   mongo:
     image: "mongo"
     restart: always
-    ports:
-     - "27017:27017"
+    #ports:
+    # - "27017:27017"
   rabbitmq:
      image: "rabbitmq:alpine"
      restart: always
